Add place of death